--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       - ./sparkVolume:/sparkVolume
     environment:
       - INIT_DAEMON_STEP=setup_spark
+    command: ["/bin/bash", "-c", "/sparkVolume/start_reader.sh"]
 
   spark-worker-1:
     image: bde2020/spark-worker:3.3.0-hadoop3.3
